--- a/src/pages/chats/chats.hbs
+++ b/src/pages/chats/chats.hbs
@@ -1,2 +1,9 @@
-<div class="chats">
+<div class="chats-page">
+    <div class="chats-page__chat-list">
+        {{{chatList}}}
+    </div>
+
+    <div class="chats-page__chat-box">
+        {{{chatBox}}}
+    </div>
 </div>
