--- a/src/pages/sign-in/signIn.hbs
+++ b/src/pages/sign-in/signIn.hbs
@@ -1,16 +1,18 @@
-<div class="signin">
-    <div class="signin-header">
-        <h2>Регистрация</h2>
-    </div>
-    <div class="signin-content">
-        <form>
-            {{#each controls}}
-                {{{this}}}
-            {{/each}}
-            {{{btn}}}
-        </form>
-    </div>
-    <div class="signin-footer">
-        {{{link}}}
-    </div>
+<div class="sign-in-page__container">
+    <h1 class='sign-in-page__title'>Вход</h1>
+
+    <form class='sign-in-page__form'>
+        <div class='sign-in-page__input'>
+            <label for='login'>Логин</label>
+            <input type='text' id='login'  name='login' placeholder='' />
+        </div>
+
+        <div class='sign-in-page__input'>
+            <label for='password'>Пароль</label>
+            <input  type='password' id='password' name='password' placeholder='' />
+        </div>
+
+        {{{ button }}}
+        <a class='link' href='#/sign-up'>Нет аккаунта?</a>
+    </form>
 </div>
