--- a/src/pages/sign-up/signUp.scss
+++ b/src/pages/sign-up/signUp.scss
@@ -1,1 +1,58 @@
+@import "src/styles/colors";
 
+.sign-up-page {
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 340px;
+    min-height: 460px;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding: 50px 30px 30px;
+    border-radius: 12px;
+    box-shadow: 0 0 6px map-get($colors, shadow-1);
+  }
+  &__title {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 57px;
+  }
+  &__form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+  }
+  &__input {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 50px;
+    }
+
+    label {
+      color: map-get($colors, text-grey);
+      font-size: 9px;
+      line-height: 9px;
+    }
+
+    input {
+      outline: none;
+      width: 100%;
+      padding: 8px 0;
+      border: none;
+      border-bottom: 1px solid map-get($colors, blue-1);
+    }
+  }
+}
+.button {
+  margin-top: auto;
+}
+.link {
+  margin-top: 14px;
+}
