--- a/src/pages/navigation/navigation.hbs
+++ b/src/pages/navigation/navigation.hbs
@@ -1,5 +1,5 @@
 <nav class="navigation-page__container">
-    <ul class="navigation-page__link">
+    <ul class="navigation-page__list">
         <li class="navigation-page__link"><a href="#/chats">Главная</a></li>
         <li class="navigation-page__link"><a href="#/sign-in">Авторизация</a></li>
         <li class="navigation-page__link"><a href="#/sign-up">Регистрация</a></li>
