--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -8,5 +8,6 @@ $colors: (
         bg-grey-2: #EFEFEF,
         bg-grey-3: #EAEAEA,
         bg-blue-1: #E4EDFD,
+        text-red-1:#FF0000,
         shadow-1: rgba(0, 0, 0, 0.14)
 )
