--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -10,6 +10,10 @@
   font-weight: 500;
   font-size: 13px;
   line-height: 13px;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.7;
+  }
   &:focus-visible {
     outline: 5px auto -webkit-focus-ring-color;
   }
