--- a/src/components/chat-box/chat-box.hbs
+++ b/src/components/chat-box/chat-box.hbs
@@ -27,12 +27,7 @@
                 <img src='{{ attachImg }}' alt='attach'>
             </button>
 
-            <form class="chat-box__form" action="#">
-                <input class="chat-box__input" type="text" name="message" placeholder="Сообщение">
-                <button type="submit" class="chat-box__send">
-                    <img src='{{ sendImg }}' alt='arrow right'>
-                </button>
-            </form>
+          {{{ form }}}
         </div>
     </div>
 {{/if}}
