--- a/src/pages/navigation/navigation.hbs
+++ b/src/pages/navigation/navigation.hbs
@@ -1,9 +1,36 @@
-<a class="navigation-page__link" href="#/chats">Главная</a>
-<a class="navigation-page__link" href="#/sign-in">Авторизация</a>
-<a class="navigation-page__link" href="#/sign-up">Регистрация</a>
-<a class="navigation-page__link" href="#/profile">Страница профиля</a>
-<a class="navigation-page__link" href="#/profile-edit">Изменить данные профиля</a>
-<a class="navigation-page__link" href="#/password-update">Изменить пароль</a>
-<a class="navigation-page__link" href="#/404">Страница 404</a>
-<a class="navigation-page__link" href="#/500">Страница 500</a>
+<ul>
+  <li class="navigation-page__link">
+    <a href="#/chats">Главная</a>
+  </li>
+  <li class="navigation-page__link">
+    <a href="#/sign-in">Авторизация</a>
+  </li>
+  <li class="navigation-page__link">
+    <a href="#/sign-up">Регистрация</a>
+  </li>
+  <li class="navigation-page__link">
+    <a href="#/profile">Страница профиля</a>
+  </li>
+  <li class="navigation-page__link">
+    <a href="#/profile-edit">Изменить данные профиля</a>
+  </li>
+  <li class="navigation-page__link">
+    <a href="#/password-update">Изменить пароль</a>
+  </li>
+  <li class="navigation-page__link">
+    <a href="#/404">Страница 404</a>
+  </li>
+  <li class="navigation-page__link">
+    <a href="#/500">Страница 500</a>
+  </li>
+</ul>
+
+
+
+
+
+
+
+
+
 
