--- a/src/pages/password-update/passwordUpdate.hbs
+++ b/src/pages/password-update/passwordUpdate.hbs
@@ -11,25 +11,7 @@
     <span>Иван</span>
   </div>
 
-  <form action="#" class="password-update__form">
-    <ul class="password-update__info-list">
-      <li class="password-update__list-item">
-        <label for="oldPassword">Старый пароль</label>
-        <input id="oldPassword" type="password" name="oldPassword">
-      </li>
-      <li class="password-update__list-item">
-        <label for="newPassword">Новый пароль</label>
-        <input id="newPassword" type="password" name="newPassword">
-      </li>
-      <li class="password-update__list-item">
-        <label for="newPasswordConfirm">Повторите новый пароль</label>
-        <input id="newPasswordConfirm" type="password" name="newPasswordConfirm">
-      </li>
-    </ul>
-
-    {{{ button }}}
-
-  </form>
+  {{{ form }}}
 
 </div>
 
