--- a/src/pages/profile-edit/profileEdit.hbs
+++ b/src/pages/profile-edit/profileEdit.hbs
@@ -11,37 +11,8 @@
     <span>Иван</span>
   </div>
 
-  <form action="#" class="profile-edit__form">
-    <ul class="profile-edit__info-list">
-      <li class="profile-edit__list-item">
-        <label for="email">Почта</label>
-        <input id="email" type="email" name="email" value="pochta@yandex.ru">
-      </li>
-      <li class="profile-edit__list-item">
-        <label for="login">Логин</label>
-        <input id="login" type="text" name="login" value="ivanivanov">
-      </li>
-      <li class="profile-edit__list-item">
-        <label for="first_name">Имя</label>
-        <input id="first_name" type="text" name="first_name" value="Иван">
-      </li>
-      <li class="profile-edit__list-item">
-        <label for="second_name">Фамилия</label>
-        <input id="second_name" type="text" name="second_name" value="Иванов">
-      </li>
-      <li class="profile-edit__list-item">
-        <label for="display_name">Имя в чате</label>
-        <input id="display_name" type="text" name="display_name" value="Иванов">
-      </li>
-      <li class="profile-edit__list-item">
-        <label for="phone">Телефон</label>
-        <input id="phone" type="tel" name="phone" value="+7 (909) 967 30 30">
-      </li>
-    </ul>
+    {{{ form }}}
 
-    {{{ button }}}
-
-  </form>
 
 </div>
 
