--- a/src/components/chat-box/chat-box.scss
+++ b/src/components/chat-box/chat-box.scss
@@ -15,6 +15,10 @@
     box-sizing: border-box;
     justify-content: space-between;
   }
+  &__input {
+    width: 100%;
+    display: flex;
+  }
   &__header {
     display: flex;
     flex-direction: row;
@@ -59,6 +63,7 @@
     align-items: center;
     justify-content: space-between;
     padding-top: 10px;
+    padding-bottom: 10px;
     border-top: 1px solid map-get($colors, bg-grey-3);
   }
   &__main {
@@ -76,6 +81,7 @@
   &__form {
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: 100%;
     height: 32px;
     input {
@@ -84,6 +90,7 @@
       width: 100%;
       font-size: 12px;
       line-height: 12px;
+      box-sizing: border-box;
       color: map-get($colors, text-grey);
       background-color: map-get($colors, bg-grey-3);
       border-radius: 30px;
@@ -92,5 +99,14 @@
   &__send {
     margin-right: 0;
     margin-left: 10px;
+    padding: 0 !important;
+    width: 28px;
+    height: 28px;
+    border: 0;
+    object-fit: cover;
+    border-radius: 50% !important;
+    background-image: url("../../../static/rounded-arrow-right.svg");
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
