--- a/src/pages/sign-in/signIn.hbs
+++ b/src/pages/sign-in/signIn.hbs
@@ -1,21 +1,3 @@
-<div class="sign-in-page__container">
-    <h1 class='sign-in-page__title'>Вход</h1>
-
-    <form class='sign-in-page__form'>
-        <div class='sign-in-page__input'>
-            <label for='login'>Логин</label>
-            <input type='text' id='login'  name='login' placeholder='' />
-        </div>
-
-        <div class='sign-in-page__input'>
-            <label for='password'>Пароль</label>
-            <input  type='password' id='password' name='password' placeholder='' />
-        </div>
-
-        {{{ button }}}
-
-        <a class='link' href='#/sign-up'>Нет аккаунта?</a>
-    </form>
-
-
-</div>
+<h1 class='sign-in-page__title'>Вход</h1>
+{{{ form }}}
+<a class='link' href='#/sign-up'>Нет аккаунта?</a>
