--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import "src/styles/colors";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import "src/styles/normalize";
 
 body {
   color: map-get($colors, text-black);
