stylelint fix and styles update

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,13 +1,13 @@
 $colors: (
-        text-black: #1E1E1E,
-        blue-1: #3369F3,
-        text-white: #FFFFFF,
-        text-grey: #999999,
-        text-red: #FF2F2F,
-        bg-grey-1: #FBFBFB,
-        bg-grey-2: #EFEFEF,
-        bg-grey-3: #EAEAEA,
-        bg-blue-1: #E4EDFD,
-        text-red-1:#FF0000,
-        shadow-1: rgba(0, 0, 0, 0.14)
-)
+  text-black: #1e1e1e,
+  blue-1: #3369f3,
+  text-white: #fff,
+  text-grey: #999,
+  text-red: #ff2f2f,
+  bg-grey-1: #fbfbfb,
+  bg-grey-2: #efefef,
+  bg-grey-3: #eaeaea,
+  bg-blue-1: #e4edfd,
+  text-red-1:#f00,
+  shadow-1: rgb(0 0 0 / 14%)
+);
