--- a/src/components/chat-box/chat-box.scss
+++ b/src/components/chat-box/chat-box.scss
@@ -11,14 +11,16 @@
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
-    width:100%;
+    width: 100%;
     box-sizing: border-box;
     justify-content: space-between;
   }
+
   &__input {
     width: 100%;
     display: flex;
   }
+
   &__header {
     display: flex;
     flex-direction: row;
@@ -27,11 +29,13 @@
     padding-bottom: 10px;
     border-bottom: 1px solid map-get($colors, bg-grey-3);
   }
+
   &__username {
     display: flex;
     flex-direction: row;
     align-items: center;
     text-decoration: none;
+
     span {
       font-weight: 600;
       font-size: 13px;
@@ -39,6 +43,7 @@
       color: map-get($colors, text-black);
     }
   }
+
   &__avatar {
     background-color: map-get($colors, bg-grey-3);
     min-width: 47px;
@@ -46,44 +51,52 @@
     border-radius: 50%;
     margin-right: 10px;
   }
-  &__dropdown, &__attach, &__send {
+
+  &__dropdown,
+  &__attach,
+  &__send {
     display: flex;
     align-items: center;
     padding: 0;
     background-color: map-get($colors, text-white);
     border: none;
     margin-right: 10px;
+
     img {
       cursor: pointer;
     }
   }
+
   &__footer {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding-top: 10px;
-    padding-bottom: 10px;
     border-top: 1px solid map-get($colors, bg-grey-3);
   }
+
   &__main {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
   }
+
   &__date {
     color: map-get($colors, text-grey);
     font-size: 12px;
     line-height: 12px;
     margin: 40px auto;
   }
+
   &__form {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
     height: 32px;
+
     input {
       padding: 10px 20px;
       border: none;
@@ -96,6 +109,7 @@
       border-radius: 30px;
     }
   }
+
   &__send {
     margin-right: 0;
     margin-left: 10px;
