--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,10 @@
 @import "src/styles/colors";
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import "https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap";
 @import "src/styles/normalize";
 
 body {
   color: map-get($colors, text-black);
-  font-family: 'Inter', sans-serif;
+  font-family: Inter, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
@@ -23,11 +23,13 @@ body {
     width: 100%;
     height: 100%;
   }
+
   .link {
     color: map-get($colors, blue-1);
     font-size: 11px;
     line-height: 11px;
     text-decoration: none;
+
     &:hover {
       text-decoration: underline;
     }
