--- a/src/pages/navigation/navigation.scss
+++ b/src/pages/navigation/navigation.scss
@@ -19,21 +19,26 @@
   }
 
   &__link {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     box-sizing: border-box;
     background-color: map-get($colors, blue-1);
-    color: map-get($colors, text-white);
-    text-decoration: none;
+    a {
+      color: map-get($colors, text-white);
+      text-decoration: none;
+      cursor: pointer;
+      padding: 12px 70px;
+      width: 100%;
+    }
     border-radius: 8px;
-    padding: 12px 70px;
     text-align: center;
     outline: none;
     border: none;
     font-weight: 500;
     font-size: 13px;
     line-height: 13px;
-    cursor: pointer;
     margin-bottom: 10px;
 
     &:hover {
