--- a/src/pages/navigation/navigation.hbs
+++ b/src/pages/navigation/navigation.hbs
@@ -1,26 +1,26 @@
 <ul>
   <li class="navigation-page__link">
-    <a href="#/chats">Главная</a>
+    <a href="/messenger">Главная</a>
   </li>
   <li class="navigation-page__link">
-    <a href="#/sign-in">Авторизация</a>
+    <a href="/sign-in">Авторизация</a>
   </li>
   <li class="navigation-page__link">
-    <a href="#/sign-up">Регистрация</a>
+    <a href="/sign-up">Регистрация</a>
   </li>
   <li class="navigation-page__link">
-    <a href="#/profile">Страница профиля</a>
+    <a href="/profile">Страница профиля</a>
   </li>
   <li class="navigation-page__link">
-    <a href="#/profile-edit">Изменить данные профиля</a>
+    <a href="/settings">Изменить данные профиля</a>
   </li>
   <li class="navigation-page__link">
-    <a href="#/password-update">Изменить пароль</a>
+    <a href="/password-update">Изменить пароль</a>
   </li>
   <li class="navigation-page__link">
-    <a href="#/404">Страница 404</a>
+    <a href="/404">Страница 404</a>
   </li>
   <li class="navigation-page__link">
-    <a href="#/500">Страница 500</a>
+    <a href="/500">Страница 500</a>
   </li>
 </ul>
