--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -1,5 +1,5 @@
 <div class="profile__sidebar">
-  <a href="#/chats">
+  <a href="/messenger">
     <img src="{{ arrowLeft }}" alt="arrow-left">
   </a>
 </div>
@@ -40,13 +40,13 @@
 
   <ul class="profile__actions-list">
     <li class="profile__list-item">
-      <a class="link" href="#/profile-edit">Изменить данные</a>
+      <a class="link" href="/settings">Изменить данные</a>
     </li>
     <li class="profile__list-item">
-      <a class="link" href="#/password-update">Изменить пароль</a>
+      <a class="link" href="/password-update">Изменить пароль</a>
     </li>
     <li class="profile__list-item">
-      <a class="link red" href="#/">Выйти</a>
+      <a class="link red" href="/">Выйти</a>
     </li>
   </ul>
 
