--- a/src/components/chat-list/chat-list.hbs
+++ b/src/components/chat-list/chat-list.hbs
@@ -1,6 +1,6 @@
 <div class="chat-aside__header">
   <div class="chat-aside__profile-link">
-    <a href="#/profile">
+    <a href="/profile">
       <span>Профиль</span>
       <img src="{{ arrowRight }}" alt="arrow">
     </a>
