--- a/src/pages/error/error.hbs
+++ b/src/pages/error/error.hbs
@@ -1,4 +1,4 @@
 <h1 class="error-page__title"> {{{ title }}}</h1>
 <span class="error-page__subtitle">{{{ subtitle }}}</span>
-<a class='link' href='#/chats'>Назад к чатам</a>
+<a class='link' href='#/messenger'>Назад к чатам</a>
 
