--- a/src/pages/password-update/passwordUpdate.hbs
+++ b/src/pages/password-update/passwordUpdate.hbs
@@ -1,5 +1,5 @@
 <div class="password-update__sidebar">
-  <a href="#/chats">
+  <a href="/messenger">
     <img src="{{ arrowLeft }}" alt="arrow-left">
   </a>
 </div>
