--- a/src/pages/profile-edit/profileEdit.hbs
+++ b/src/pages/profile-edit/profileEdit.hbs
@@ -1,5 +1,5 @@
 <div class="profile-edit__sidebar">
-  <a href="#/chats">
+  <a href="/messenger">
     <img src="{{ arrowLeft }}" alt="arrow-left">
   </a>
 </div>
