--- a/src/components/chat-list-item/chat-list-item.hbs
+++ b/src/components/chat-list-item/chat-list-item.hbs
@@ -1,8 +1,8 @@
 <div class="chat-list-item__avatar"></div>
 
 <div class="chat-list-item__content-left">
-  <span class="chat-list-item__message-sender">{{login}}</span>
-  <p class="chat-list-item__message-text">{{content}}</p>
+  <span class="chat-list-item__message-sender">{{title}}</span>
+  <p class="chat-list-item__message-text">{{last_message.content}}</p>
 </div>
 
 <div class="chat-list-item__content-right">
