--- a/src/components/message/message.hbs
+++ b/src/components/message/message.hbs
@@ -1,5 +1,4 @@
-<p class="message__text">{{ text }}</p>
+<p class="message__text">{{ content }}</p>
 <span class="message__time">
   {{ time }}
 </span>
-
