--- a/src/components/chat-box/chat-box.hbs
+++ b/src/components/chat-box/chat-box.hbs
@@ -1,33 +1,23 @@
-{{#if isEmpty}}
-    <span class='chat-box__empty-message'>Выберите чат чтобы отправить сообщение</span>
-{{else}}
-    <div class="chat-box__container">
-        <div class="chat-box__header">
-            <a href="#" class="chat-box__username">
-                <div class="chat-box__avatar"></div>
-                <span>Petya</span>
-            </a>
-
-
-
-            <button class="chat-box__dropdown">
-                <img src='{{ dropdownImg }}' alt='dropdown menu'>
-            </button>
-        </div>
-
-        <div class="chat-box__main">
-            <span class="chat-box__date">19 июня</span>
-            {{#each messages}}
-                {{{this}}}
-            {{/each}}
-        </div>
-
-        <div class="chat-box__footer">
-            <button class="chat-box__attach">
-                <img src='{{ attachImg }}' alt='attach'>
-            </button>
-
-          {{{ form }}}
+{{#if selectedChat}}
+    <div class="chat-box__header">
+        <a href="#" class="chat-box__username">
+            <div class="chat-box__avatar"></div>
+            <span>Petya</span>
+        </a>
+        <div class="chat-box__dropdown">
+            {{{menu}}}
         </div>
     </div>
+
+    <div class="chat-box__main">
+        {{#each messages}}
+            {{{this}}}
+        {{/each}}
+    </div>
+
+    <div class="chat-box__footer">
+        {{{ form }}}
+    </div>
+{{else}}
+    <span class='chat-box__empty-message'>Выберите чат чтобы отправить сообщение</span>
 {{/if}}
