--- a/src/components/chat-box/chat-box.scss
+++ b/src/components/chat-box/chat-box.scss
@@ -52,7 +52,18 @@
     margin-right: 10px;
   }
 
-  &__dropdown,
+  &__dropdown {
+    .button__icon {
+      background: url("../../../static/dropdown-3dots.svg");
+      width: 16px;
+      height: 16px;
+      padding: 0;
+      background-position: center;
+      background-repeat: no-repeat;
+      border: 0;
+    }
+  }
+
   &__attach,
   &__send {
     display: flex;
@@ -77,6 +88,7 @@
   }
 
   &__main {
+    padding: 20px 0;
     width: 100%;
     height: 100%;
     display: flex;
