--- a/src/components/chat-list/chat-list.hbs
+++ b/src/components/chat-list/chat-list.hbs
@@ -9,6 +9,8 @@
   <form class='chat-aside__search-input'>
     <input type="text" name="search" placeholder="Поиск">
   </form>
+
+    {{{ button }}}
 </div>
 
 <ul class="chat-aside__list">
