--- a/src/components/chat-box/chat-box.hbs
+++ b/src/components/chat-box/chat-box.hbs
@@ -1,9 +1,9 @@
 {{#if selectedChat}}
     <div class="chat-box__header">
-        <a href="#" class="chat-box__username">
-            <div class="chat-box__avatar"></div>
-            <span>Petya</span>
-        </a>
+        <div class="chat-box__username">
+            <img src="{{avatar}}" class="chat-box__avatar"></img>
+            <span>{{title}}</span>
+        </div>
         <div class="chat-box__dropdown">
             {{{menu}}}
         </div>
