--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -9,6 +9,7 @@
     margin-bottom: 10px;
     max-width: 50%;
     border-radius: 12px 12px 12px 0;
+    word-break: break-all;
 
     &_mine {
       align-self: flex-end;
