--- a/src/components/avatar/avatar.scss
+++ b/src/components/avatar/avatar.scss
@@ -26,6 +26,12 @@
     position: absolute;
     top: 45px;
   }
+  .avatar-img {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    border-radius: 50%;
+  }
 
   label {
     color: map-get($colors, text-white);
@@ -40,6 +46,8 @@
     opacity: 0;
     height: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
   }
 
   &:hover {
