--- a/src/components/chat-list-item/chat-list-item.hbs
+++ b/src/components/chat-list-item/chat-list-item.hbs
@@ -1,4 +1,4 @@
-<div class="chat-list-item__avatar"></div>
+<img src="{{avatar}}" class="chat-list-item__avatar"></img>
 
 <div class="chat-list-item__content-left">
   <span class="chat-list-item__message-sender">{{title}}</span>
@@ -8,7 +8,7 @@
 <div class="chat-list-item__content-right">
   <span class="chat-list-item__time">{{time}}</span>
   {{#if unread_count}}
-    <div class="chat-list-item__badge">{{{unread_count}}}</div>
+    <div class="chat-list-item__badge">{{unread_count}}</div>
   {{/if}}
 </div>
 
