--- a/src/components/chat-list/chat-list.scss
+++ b/src/components/chat-list/chat-list.scss
@@ -2,7 +2,7 @@
 
 .chat-aside {
   &__container {
-    padding: 20px 0;
+    padding: 20px 0 0 0;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -59,5 +59,8 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    max-height: 100%;
+    overflow-x: clip;
+    overflow-y: auto;
   }
 }
