--- a/src/components/dropdown-menu/dropdown-menu.scss
+++ b/src/components/dropdown-menu/dropdown-menu.scss
@@ -1,6 +1,6 @@
 @import "src/styles/colors";
 
-.menu {
+.dropdown-menu {
   position: absolute;
   background-color: map-get($colors, text-white);
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
