--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -30,7 +30,7 @@
     </li>
     <li class="profile__list-item">
       <span>Имя в чате</span>
-      <span class="grey">{{ first_name }}</span>
+      <span class="grey">{{ display_name }}</span>
     </li>
     <li class="profile__list-item">
       <span>Телефон</span>
