--- a/src/components/chat-list/chat-list.scss
+++ b/src/components/chat-list/chat-list.scss
@@ -2,7 +2,7 @@
 
 .chat-aside {
   &__container {
-    padding: 20px 0 0 0;
+    padding: 20px 0 0;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -19,7 +19,7 @@
 
     .add-chat-button {
       width: 100%;
-      padding: 12px 12px;
+      padding: 12px;
       margin-bottom: 10px;
     }
   }
