--- a/src/components/chat-list-item/chat-list-item.scss
+++ b/src/components/chat-list-item/chat-list-item.scss
@@ -21,6 +21,10 @@
     margin-right: 10px;
   }
 
+  &__content-left {
+    max-width: 60%;
+  }
+
   &__message-sender {
     display: flex;
     margin-bottom: 4px;
