--- a/src/pages/password-update/passwordUpdate.hbs
+++ b/src/pages/password-update/passwordUpdate.hbs
@@ -1,7 +1,5 @@
 <div class="password-update__sidebar">
-  <a href="/messenger">
-    <img src="{{ arrowLeft }}" alt="arrow-left">
-  </a>
+    {{{backButton}}}
 </div>
 
 <div class="password-update__main">
