--- a/src/pages/profile-edit/profileEdit.hbs
+++ b/src/pages/profile-edit/profileEdit.hbs
@@ -1,7 +1,5 @@
 <div class="profile-edit__sidebar">
-    <a href="/messenger">
-        <img src="{{ arrowLeft }}" alt="arrow-left">
-    </a>
+    {{{backButton}}}
 </div>
 
 <div class="profile-edit__main">
