--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -1,7 +1,5 @@
 <div class="profile__sidebar">
-  <a href="/messenger">
-    <img src="{{ arrowLeft }}" alt="arrow-left">
-  </a>
+    {{{backButton}}}
 </div>
 
 <div class="profile__main">
@@ -42,10 +40,10 @@
 
   <ul class="profile__actions-list">
     <li class="profile__list-item">
-      <a class="link" href="/settings">Изменить данные</a>
+        {{{editProfileLink}}}
     </li>
     <li class="profile__list-item">
-      <a class="link" href="/password-update">Изменить пароль</a>
+        {{{editPasswordLink}}}
     </li>
     <li class="profile__list-item">
         {{{ logoutBtn }}}
