--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,7 +35,8 @@ body {
       text-decoration: underline;
     }
   }
-  .arrowLeftButton {
+
+  .arrow-left-button {
     display: flex;
     margin: 0;
     padding: 0 !important;
